--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,19 +1,20 @@
 @import '../../assets/sass/variables';
 
 .button {
+    font-family: 'Averta-Regular', sans-serif;
+    display: flex;
+    align-items: center;
     border-radius: 6px;
-    padding: 12px 24px;
     font-weight: 900;
     border: none;
     cursor: pointer;
+
+    &:focus {
+        border: 2px solid  $primary;
+    }
+
     &:hover {
         box-shadow: 0px 4px 8px -2px rgba(40, 133, 246, 0.1), 0px 2px 4px -2px rgba(40, 133, 246, 0.06);
-    }
-    .arrowIcon {
-        font-size: 1rem;
-        // padding: 0px 5px
-        position: relative;
-        top: 4px;
     }
 }
 
@@ -21,16 +22,63 @@
     color: $tertiaryContrastText ;
     background-color: $tertiary ;
     border: 1px solid #D0D5DD;
+
+    &[disabled]{
+        background-color: #F9FAFB;
+        color: #D0D5DD;
+        border: none;
+    }
 }
 
 .primary {
     color: $primaryContrastText ;
     background-color: $primary ;
     border: 1px solid #D0D5DD;
+
+    &[disabled]{
+       box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+        background-color: #E3F2FF;
+        color: #fff;
+    }
 }
 
 .secondary {
     color: $secondaryContrastText ;
     background-color: $secondary ;
     border: 1px solid #D0D5DD;
+
+    &[disabled]{
+        background-color: #BCDDFF;
+        color: #fff;
+    }
+}
+
+.large {
+    padding: 12px 24px;
+    font-size: 18px;
+
+    svg {
+        width: 23px !important;
+        height: 20px !important;
+    }
+}
+
+.medium {
+    padding: 10px 18px;
+    font-size: 16px;
+
+      svg {
+        width: 17px !important;
+        height: 19px !important;
+    }
+}
+
+.small {
+    padding: 8px 14px;
+    font-size: 14px;
+
+    svg {
+        width: 15px !important;
+        height: 14px !important;
+    }
 }
