--- a/src/components/Input/input.module.scss
+++ b/src/components/Input/input.module.scss
@@ -1,49 +1,65 @@
-
-
 .inputContainer {
-    font-family: 'Averta-Regular', sans-serif;
-    box-shadow: 0px 0px 23px 0px #0000002e;
-
-    input:focus,
-    input:not(:focus):valid{
-        background-color: #E3F2FF;
-    }
-
-    input:focus ~ .floatingLabel,
-    input:not(:focus):valid ~ .floatingLabel{
-        top: 18px;
-        bottom: 10px;
-        left: 20px;
-        font-size: 11px;
-        opacity: 1;
-    }
-
-
-    .inputText {
-        font-size: 14px;
-        width: 100%;
-        height: 40px;
-        border: none;
-
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 56px;
+    input {
+        height: 100%;
+        padding: 23px 12px 6px;
+        background-color: #F2F4F7;
+        border-radius: 6px;
+        border: 2px solid #F2F4F7;
+        font-size: 18px;
+        font-weight: 600;
+        font-style: normal;
+        color: #344054;
+        font-family: 'Averta', sans-serif;
         &:hover {
             background-color: #E3F2FF;
+            transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
         }
-
-        &:focus {
-            border: 2px solid #2885F6;
-            ~ .floatingLabel {
-                color: #2885F6;
-            }
+        &:active, &:focus {
+            outline: none;
+            border-color: #2885F6;
+            background-color: #E3F2FF;
         }
     }
-
-    .floatingLabel {
+    input.error {
+        border-color: #C34A35;
+    }
+    .error {
+        color: #C34A35;
+        font-size: 14px;
+        margin-top: 4px;
+        font-family: 'Averta', sans-serif;
+        font-weight: 600;
+        margin-left: 12px;
+    }
+    label {
         position: absolute;
+        top: 18px;
         pointer-events: none;
-        left: 20px;
-        top: 25px;
-        transition: 0.2s ease all;
+        transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 1;
+        left: 12px;
+        font-family: 'Averta', sans-serif;
         color: #667085;
     }
-
+}
+.inputContainer:focus-within label {
+    color: #2885F6;
+    font-weight: 600;
+    top: 5px;
+    font-size: 14px;
+    font-family: 'Averta', sans-serif;
+}
+.inputContainer label.filled {
+    top: 5px;
+    font-weight: 600;
+    font-size: 14px;
+    color: #2885F6;
+    font-family: 'Averta', sans-serif;
 }
