--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,13 +4,13 @@
     font-family: 'Averta-Regular', sans-serif;
     display: flex;
     align-items: center;
+    justify-content: center;
     border-radius: 6px;
     font-weight: 900;
-    border: none;
+    border: 2px solid transparent;
     cursor: pointer;
-
     &:focus {
-        border: 2px solid  $primary;
+        border-color: $primary;
     }
 
     &:hover {
