--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -33,7 +33,10 @@
 .primary {
     color: $primaryContrastText ;
     background-color: $primary ;
-    border: 1px solid #D0D5DD;
+    border: 2px solid #D0D5DD;
+    &:active, &:focus {
+        border-color: #D0D5DD;
+    }
 
     &[disabled]{
        box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
