--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -4,3 +4,8 @@ $primaryContrastText: #fff;
 $secondaryContrastText: #2740B0;
 $tertiary: #F9FAFB;
 $tertiaryContrastText: #1D2939;
+$cardBorderColor: #E4E7EC;
+$primaryFontSize: 18px;
+$fontRegular: 400px;
+$fontSemiBold: 600px;
+$fontBold: 900px;
