--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
   padding-block: 96px;
-  background-color: #1D2939;
+  // background-color: #1D2939;
   .customContainer {
     max-width: 1140px;
     padding-inline: 15px;
@@ -11,7 +11,7 @@
       .logoSection {
         p {
           font-size: 13.44px;
-          color: #ffffff;
+          // color: #ffffff;
           font-weight: 400;
           Line-height: 17.85px;
           letter-spacing: 0.8px;
@@ -24,7 +24,7 @@
         justify-content: flex-end;
         column-gap: 10px;
         * {
-          color: #ffffff;
+          // color: #ffffff;
         }
         a {
           text-decoration: none;
@@ -45,8 +45,8 @@
             font-family: 'Averta', sans-serif;
             font-size: 14.44px;
             font-weight: normal;
-            color: #D0D5DD;
-            background-color: #475467;
+            // color: #D0D5DD;
+            // background-color: #475467;
             letter-spacing: 0.5px;
             padding: 0 12px;
             width: 200px;
@@ -73,7 +73,7 @@
       .listingWrapper {
         h6 {
           padding-bottom: 1rem;
-          color: #ffffff;
+          // color: #ffffff;
           font-weight: 600;
           line-height: 150%;
           letter-spacing: 0.8px;
@@ -89,7 +89,7 @@
             }
             a {
               text-decoration: none;
-              color: #ffffff;
+              // color: #ffffff;
               font-family: 'Averta', sans-serif;
               font-size: 13.44px;
               font-weight: 400;
@@ -101,7 +101,7 @@
       }
     }
     .borderColor {
-      border-color: #475467;
+      // border-color: #475467;
     }
     .bottomContent {
       padding-top: 40px;
@@ -110,7 +110,7 @@
       justify-content: space-between;
       column-gap: 15px;
       a, p {
-        color: #ffffff;
+        // color: #ffffff;
         text-decoration: none;
         font-family: 'Averta', sans-serif;
         font-size: 13.44px;
