--- a/src/components/Theme/Colors/Colors.module.scss
+++ b/src/components/Theme/Colors/Colors.module.scss
@@ -11,13 +11,13 @@
         align-items: center;
         padding-bottom: 20px;
         font-weight: 700;
-        color: rgba(51, 51, 51, 0.6);
+        // color: rgba(51, 51, 51, 0.6);
 
         .left {
             flex: 0 0 30%;
             &:first-child {
                 font-weight: 500;
-                color: rgba(51, 51, 51, 0.8);
+                // color: rgba(51, 51, 51, 0.8);
             }
             
         }
