--- a/src/components/Theme/Typography/Typography.module.scss
+++ b/src/components/Theme/Typography/Typography.module.scss
@@ -2,7 +2,7 @@
     -webkit-font-smoothing: antialiased;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     border-radius: 4px;
-    background: rgb(255, 255, 255);
+    // background: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0 / 10%) 0px 1px 3px 0px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     margin: 25px 0px 40px;
